[package]
name = "docker-search-rs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ifrit653/docker-search-rs"


[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
clap = { version = "4.6.3", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
